--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,9 @@
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
+    "@ngui/map": "^0.18.4",
     "@types/google-maps": "^3.2.0",
+    "@types/googlemaps": "^3.26.17",
     "angular-in-memory-web-api": "~0.3.0",
     "core-js": "^2.4.1",
     "ng2-map": "^0.16.5",
